@@ -40,8 +40,8 @@ client :-
 	ssl_init(SSL, client,
 		 [ host('localhost'),
                    port(1111),
-                   cert(1),
-                   peer_cert(1),
+                   cert(true),
+                   peer_cert(true),
 		   cacert_file('etc/demoCA/cacert.pem'),
 		   certificate_file('etc/client/client-sign.pem'),
 		   key_file('etc/client/client-sign-key.pem'),
