@@ -41,8 +41,8 @@ server :-
 	ssl_init(SSL, server,
 		 [ host('localhost'),
                    port(1111),
-                   cert(1),
-                   peer_cert(1),
+                   cert(true),
+                   peer_cert(true),
 		   cacert_file('etc/demoCA/cacert.pem'),
 		   certificate_file('etc/server/server-cert.pem'),
 		   key_file('etc/server/server-key.pem'),
