@@ -64,8 +64,8 @@ make_server(SSL) :-
 	ssl_init(SSL, server,
 		 [ host('localhost'),
                    port(1111),
-                   cert(1),
-                   peer_cert(1),
+                   cert(true),
+                   peer_cert(true),
 		   cacert_file('etc/demoCA/cacert.pem'),
 		   certificate_file('etc/server/server-cert.pem'),
 		   key_file('etc/server/server-key.pem'),
@@ -116,8 +116,8 @@ client :-
 	ssl_init(SSL, client,
 		 [ host('localhost'),
                    port(1111),
-                   cert(1),
-                   peer_cert(1),
+                   cert(true),
+                   peer_cert(true),
 		   cacert_file('etc/demoCA/cacert.pem'),
 		   certificate_file('etc/client/client-sign.pem'),
 		   key_file('etc/client/client-sign-key.pem'),
