@@ -1,3 +1,7 @@
+Jun 29, 2004
+
+  * MODIFIED: use true/false for boolean options.
+
 Jun 28, 2004
 
   * FIXED: (JW) release of config structure
